updated description on 'More About Me' section

--- a/main.html
+++ b/main.html
@@ -79,11 +79,11 @@
                     <div class="about_me">
                         <h4>More About Me</h4>
 
-                        <p>My background is quite complex since I have both expiriences and exposure to Engineering and IT disciplines. I love
+                        <p>My background is quite complex since I have both expiriences and exposure to both Engineering and IT disciplines. I love
                             everything that involves technology, which includes medical device development, software programming, front end development, and more.
                         </p>
 
-                        <p>I keep myself busy with projects and expanding my knowledge, such as data analysis, while also expanding my profile with different programming
+                        <p>I keep myself busy with projects while expanding my knowledge, such as data analysis, to help expand my profile with different programming
                             language disciplines.
                         </p>
 
