--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
                             everything that involves technology, which includes medical device development, software programming, front end development, and more.
                         </p>
 
-                        <p>I keep myself busy with projects while expanding my knowledge, such as data analysis, to help expand my profile with different programming
+                        <p>I keep myself busy with personal projects while expanding my knowledge writing and understanding different programming
                             language disciplines.
                         </p>
 
