--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                         <h4>Expertise</h4>
 
-                        <p>Full Stack Developer and Security Analyst with a primary focus on Data Integrity and Network Security. <a target="_blank" href="img/Jose Enquito Resume-2023.pdf">Download Resume</a></p>
+                        <p>Full Stack Developer and Security Analyst with a primary focus on Data Integrity and Network Security. <a target="_blank" href="Jose Enquito Resume-2023.pdf">Download Resume</a></p>
 
                         <div id="skills">
                             <ul>
