--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
         </section>
 
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
 
     </body>
 </html>
