--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <img class="thumbnail" src="img/cybersecurity.png">
                             <div class="preview">
                                 <h6 class="post_title">Cybersecurity Projects</h6>
-                                <p class="post_intro">Projects pertaining to Cybersecurity, specifically the application of knowledge learned from college applied in real life.</p>
+                                <p class="post_intro">Projects pertaining to Cybersecurity using detection, analysis, and testing, specifically the application of knowledge learned from college applied in real life.</p>
                                 <a href="cyber.html">Read More</a>
                             </div>
                         </div>
