--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     </div>
 
                     <div class="social_links">
-                        <img id="social_image" src="#">
-                        <h3>Place topic here:</h3>
+                        <img id="social_image" src="img/JayEnquito.PNG">
+                        <h3>Social Media Links:</h3>
 
                         <a target="_blank" href="https://www.linkedin.com/in/jose-enquito-5a4b05a8/">
                             LinkedIn: Jose "Jay" Enquito
