--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                                 <li>AWS (IAM, Detective)</li>
                                 <li>Kali Linux (VMWare with Zero Tier)</li>
                                 <li>Wire Shark / SolarWinds Network</li>
-                                <li>skills</li>
-                                <li>HTML / CSS</li>
+                                <li>Risk Management (Penetration Testing, CIRT)</li>
+                                <li>Project Management (JIRA, Waterfall, Srcum)</li>
                             </ul>
                         </div>
                     
