--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <link rel="stylesheet" type="text/css" href="style.css"/>
 
-        <link id="theme_color" rel="stylesheet" type="text/css" href="style.css">
+        <link id="theme_color" rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>   
 
@@ -67,8 +67,6 @@
                             </div>
                         </div>
                     </div>
-                <!--p>Insert Sentence Here</!--p>
-                <a-- href="#">Link 1</a-->
             </div>
         </section>
 
