--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </div>
 
                             <ul id="dot_nav">
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#contact_form">Contact</a></li>
                             </ul>
                         </div>
                         <div class="left_column">
