--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <div id="corner_tl" class="corner"></div>
                                     <div id="corner_tr" class="corner"></div>
                                     <h3>Who am I?</h3>
-                                    <p>I am an aspiring Cybersecurity Analyst and Full Stack Developer, with years of experience in 
+                                    <p>I am an aspiring Cybersecurity Analyst and Full Stack Developer with years of experience in 
                                     programming as well as a background in Engineering
                                     </p>
                                     <div id="corner_bl" class="corner"></div>
