--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <img class="thumbnail" src="img/cybersecurity.png">
                             <div class="preview">
                                 <h6 class="post_title">Cybersecurity Projects</h6>
-                                <p class="post_intro">Projects pertaining to Cybersecurity using detection, analysis, and testing, specifically the application of knowledge learned from college applied in real life.</p>
+                                <p class="post_intro">A compilation of cybersecurity skills, accomplishments, and expertise that showcases the ability to identify, assess, and mitigate security risks as well as recovering from any cyber threats.</p>
                                 <a href="cyber.html">Read More</a>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                             <img class="thumbnail" src="img/webdev.png">
                             <div class="preview">
                                 <h6 class="post_title">Web Development Projects</h6>
-                                <p class="post_intro">Projects pertaining to Web Development, both front-end and back-end, specifically the application of knowledge learned from college applied in real life.</p>
+                                <p class="post_intro">This portfolio showcases projects that serves as a visual representation as well as a demonstration of the profiency in various frameworks and tools for programming.</p>
                                 <a href="webdev.html">Read More</a>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                             <img class="thumbnail" src="img/PM.jpg">
                             <div class="preview">
                                 <h6 class="post_title">IT Management Projects</h6>
-                                <p class="post_intro">Projects pertaining to IT Project Management, ranging from database to SQL, with applications to a work environment projected in real life.</p>
+                                <p class="post_intro">Projects pertaining to IT Project Management, such as database management and SQL, that have been applied to solve and streamline real life problems.</p>
                                 <a href="projectmanagement.html">Read More</a>
                             </div>
                         </div>
