--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <img class="thumbnail" src="img/webdev.png">
                             <div class="preview">
                                 <h6 class="post_title">Web Development Projects</h6>
-                                <p class="post_intro">This portfolio showcases projects that serves as a visual representation as well as a demonstration of the profiency in various frameworks and tools for programming.</p>
+                                <p class="post_intro">This portfolio showcases projects that serves as a visual representation as well as a demonstration of programming languages, as well as proficiency of various frameworks and tools for programming.</p>
                                 <a href="webdev.html">Read More</a>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                             <img class="thumbnail" src="img/PM.jpg">
                             <div class="preview">
                                 <h6 class="post_title">IT Management Projects</h6>
-                                <p class="post_intro">Projects pertaining to IT Project Management, such as database management and SQL, that have been applied to solve and streamline real life problems.</p>
+                                <p class="post_intro">Overseeing project lifecycle, from initiation to closure, while ensuring the effictive utilization of resources such as Agile, Scrum, Waterfall, to structure and streamline project workflows.</p>
                                 <a href="projectmanagement.html">Read More</a>
                             </div>
                         </div>
