--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <img class="thumbnail" src="img/PM.jpg">
                             <div class="preview">
                                 <h6 class="post_title">IT Management Projects</h6>
-                                <p class="post_intro">Overseeing project lifecycle, from initiation to closure, while ensuring the effictive utilization of resources such as Agile, Scrum, Waterfall, to structure and streamline project workflows.</p>
+                                <p class="post_intro">Oversee the project lifecycle, from initiation to closure, while ensuring the effictive utilization of resources such as Agile, Scrum, Waterfall, to structure and streamline project workflows to foster effective collaboration and stakeholder satisfaction.</p>
                                 <a href="projectmanagement.html">Read More</a>
                             </div>
                         </div>
