--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <div id="skills">
                             <ul>
                                 <li>Python</li>
-                                <li>Django</li>
-                                <li>Javascript</li>
+                                <li>Java</li>
                                 <li>HTML / CSS</li>
-                                <li>REST API</li>
+                                <li>Javascript</li>
+                                <li>Django Web Framework</li>
                             </ul>
 
                             <ul>
@@ -105,7 +105,7 @@
                                 <li>Kali Linux (VMWare with Zero Tier)</li>
                                 <li>Wire Shark / SolarWinds Network</li>
                                 <li>Risk Management (Penetration Testing, CIRT)</li>
-                                <li>Project Management (JIRA, Waterfall, Srcum)</li>
+                                <li>Project Management (JIRA, Waterfall, Scrum)</li>
                             </ul>
                         </div>
                     
