--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="main_container">
                 <h3 style="text-align:center;">Get In Touch</h3>
 
-                <form id="contact_form">
+                <form id="contact_form" action="mailto:jhei.enquito@gmail.com" method="post" enctype="text/plain">
                     <label>Name</label>
                     <input class="input_field" type="text" name="name">
 
