--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
             <div class="main_container">
                 <h3 style="text-align:center;">Get In Touch</h3>
 
-                <form id="contact_form" action="mailto:jhei.enquito@gmail.com" method="post" enctype="text/plain">
+                <form id="contact_form" action="https://formsubmit.co/jhei.enquito@gmail.com" method="POST">
                     <label>Name</label>
-                    <input class="input_field" type="text" name="name">
+                    <input class="input_field" type="text" name="name" required>
 
                     <label>Subject</label>
                     <input class="input_field" type="text" name="subject">
 
                     <label>Email</label>
-                    <input class="input_field" type="text" name="email address">
+                    <input class="input_field" type="text" name="email address" required>
 
                     <label>Message</label>
                     <textarea class="input_field" type="message" name="message"></textarea>
