--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <input class="input_field" type="text" name="subject">
 
                     <label>Email</label>
-                    <input class="input_field" type="text" name="email address" required>
+                    <input class="input_field" type="text" name="email" required>
 
                     <label>Message</label>
                     <textarea class="input_field" type="message" name="message"></textarea>
