--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </ul>
                         </div>
                         <div class="left_column">
-                            <img id="profile_picture" src="img/Hawaiian.jpg">
+                            <img id="profile_picture" src="img/JayGraduation.jpg">
                             <h5 style="text-align:center; line-height: 0;">Personalize My Theme</h5>
                             
                             <div id="optional_themes_wrapper">
