--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             </ul>
                         </div>
                         <div class="left_column">
-                            <img id="profile_picture" src="img/JayGraduation.jpg">
-                            <h5 style="text-align:center; line-height: 0;">Personalize My Theme</h5>
+                            <img id="profile_picture" src="img/Jay.jpg">
+                            <h5 class="personalize" style="text-align:center; line-height: 0;">Personalize My Theme</h5>
                             
                             <div id="optional_themes_wrapper">
                                 <div data-mode="default" id="default_mode" class="theme_dot"></div>
