--- a/cyber.html
+++ b/cyber.html
@@ -50,12 +50,12 @@
 
                 <div class="left_column">
                     <li><a target="_blank" href="cyber/MaxPen Penetration Report.pdf">Penetration Test Report</a></li>    
-                    <li>project 1</li>
+                    <li><a target="_blank" href="cyber/Malware Detection and Resolve.pdf">Malware Detection</a></li>
                 </div>
                     
                 <div class="right_column">
-                    <li>project 1</li>
-                    <li>project 1</li>  
+                    <li><a target="_blank" href="cyber/Hellboundhackers Ethical Hacking.pdf">Ethical Hacking</a></li>
+                    <li><a target="_blank" href="cyber/Ransomware-as-a-Service.pdf">Ransomware Research and Report</li>  
                 </div>
             </div>
         </section>
