--- a/cyber.html
+++ b/cyber.html
@@ -55,7 +55,7 @@
                     
                 <div class="right_column">
                     <li><a target="_blank" href="cyber/Hellboundhackers Ethical Hacking.pdf">Ethical Hacking</a></li>
-                    <li><a target="_blank" href="cyber/Ransomware-as-a-Service.pdf">Ransomware Research and Report</li>  
+                    <li><a target="_blank" href="cyber/Ransomware-as-a-Service.pdf">Ransomware Research and Report</a></li>  
                 </div>
             </div>
         </section>
