--- a/ChatGPT/index.html
+++ b/ChatGPT/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>meGPT</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,28 +11,26 @@
     </head>
     <body>
 
-        <div class="div container">
-            <div class="div header">
-                <h3>ChatGPT Bot</h3>
+        <div class="container">
+            <div class="header">
+                <h3>ChatGPT Bot Extension</h3>
             </div>
-        </div>
 
-        <div class="info">
-            <a href="https" class="href" target="_blank">
+            <div class="info">
+                <a href="https://jenquito.github.io" class="href" target="_blank">
+                    Coded by Jay Enquito
+                </a>
+            </div>
 
-            </a>
-        </div>
-
-        <div class="chat-container">
-            <div id="chat-log">
-
+            <div class="chat-container">
+                <div id="chat-log"></div>
             </div>
 
             <div class="input-container">
                 <input type="text" id="user-input" placeholder="Send a message.">
-                <button id="send-button">
-                    <i class="fa-solid fa-paper-plane" id="button-icon"></i>
-                </button>
+                    <button id="send-button">
+                        <i class="fa-solid fa-paper-plane" id="button-icon"></i>
+                    </button>
             </div>
         </div>
 
