--- a/cyber.html
+++ b/cyber.html
@@ -44,19 +44,16 @@
           
 
             <div class="intro_wrapper">
-                <div class="nav_wrapper">
+                <div class="nav_wrapper" style="grid-area:0;">
                     <h5 style="justify-content: center;">Click on the following links</h5>
                 </div>
 
-                <div class="left_column">
+                <div class="center_column">
                     <li><a target="_blank" href="cyber/MaxPen Penetration Report.pdf">Penetration Test Report</a></li>    
                     <li><a target="_blank" href="cyber/Malware Detection and Resolve.pdf">Malware Detection</a></li>
-                </div>
-                    
-                <div class="right_column">
                     <li><a target="_blank" href="cyber/Hellboundhackers Ethical Hacking.pdf">Ethical Hacking</a></li>
                     <li><a target="_blank" href="cyber/Ransomware-as-a-Service.pdf">Ransomware Research and Report</a></li>  
-                </div>
+                </div>     
             </div>
         </section>
 
