--- a/webdev.html
+++ b/webdev.html
@@ -38,24 +38,19 @@
         <section class="s1">
             <div class="main_container">
                 <div class="greeting_wrapper">
-                    <h1>Web Development Projects</h1>
+                    <h1>Programming Projects</h1>
                 </div>
             </div>
           
 
             <div class="intro_wrapper">
-                <div class="nav_wrapper">
+                <div class="nav_wrapper" style="grid-area:0;">
                     <h5 style="justify-content: center;">Click on the following links</h5>
                 </div>
 
-                <div class="left_column">
-                    <li>project 1</li>    
-                    <li>project 1</li>
-                </div>
-                    
-                <div class="right_column">
-                    <li>project 1</li>
-                    <li>project 1</li>  
+                <div class="center_column">
+                    <li><a target="_blank" href="Weather App/index.html">Weather App using HTML, CSS, JavaScript</a></li>    
+                    <li><a target="_blank" href="Chat(me)GPT/index.html">Custom ChatGPT</a></li>
                 </div>
             </div>
         </section>
