--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="about_me">
                         <h4>More About Me</h4>
 
-                        <p>My background is quite complex since I have both experience and exposure to both Engineering and IT disciplines. I love
+                        <p>My background is quite complex since I have both experience and exposure to both Engineering and Programming disciplines. I love
                             everything that involves technology, which includes medical device development, software programming, front-end development, and more.
                         </p>
 
@@ -89,7 +89,7 @@
 
                         <h4>Expertise</h4>
 
-                        <p>Full Stack Developer and Security Analyst, primarily focusing on Data Protection and Network Security. <a id="resume" target="_blank" href="resume/Jose Enquito Resume-2023.pdf">Download Resume</a></p>
+                        <p>Full Stack Developer and Security Analyst, primarily focusing on Data Protection and Network Security.</p>
 
                         <div id="skills">
                             <ul>
@@ -115,14 +115,11 @@
                         <img id="social_image" src="img/JayEnquito.PNG">
                         <h3>Social Media Links:</h3>
 
-                        <a target="_blank" href="https://www.linkedin.com/in/jose-enquito-5a4b05a8/">
-                            
+                        <a target="_blank" href="https://www.linkedin.com/in/jose-enquito-5a4b05a8/">   
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                              </svg> Jose Enquito
-
+                            </svg> Jose Enquito                          
                         </a>
-                        
                     </div>
                 </div>
             </div>
@@ -181,7 +178,7 @@
                     <label>Subject</label>
                     <input class="input_field" type="text" name="subject">
 
-                    <label>Email</label>
+                    <label>Email Address</label>
                     <input class="input_field" type="text" name="email" required>
 
                     <label>Message</label>
