--- a/webdev.html
+++ b/webdev.html
@@ -45,7 +45,7 @@
 
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Click on the following links</h5>
+                    <h5 style="justify-content: center;">Click on the following links below and dowload the <a a target="_blank" href="resume/Jose Enquito Web Development 2023.pdf">resume here</a>.</h5>
                 </div>
 
                 <div class="center_column">
