--- a/cyber.html
+++ b/cyber.html
@@ -42,10 +42,9 @@
                 </div>
             </div>
           
-
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Click on the links below and download the <a target="_blank" href="resume/Jose Enquito Cyber Security Resume 2023.pdf">resume here</a>.</h5>
+                    <h5 style="justify-content: center;">Click on the links below and download the <a target="_blank" href="resume/Jose Enquito Cyber Security Resume 2023.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
                 </div>
 
                 <div class="center_column">
