--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="search-box">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="Enter your location">
-            <button class="fa-solid fa-magnifying-glass"></button>
+            <input id="input" type="text" placeholder="Enter your location">
+            <button id="send-button" class="fa-solid fa-magnifying-glass"></button>
         </div>
 
         <div class="not-found">
