--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <img class="thumbnail" src="img/cybersecurity.png">
                             <div class="preview">
                                 <h6 class="post_title">Cybersecurity Projects</h6>
-                                <p class="post_intro">A compilation of cybersecurity skills, accomplishments, and expertise that showcases the ability to identify, assess, and mitigate security risks as well as recovering from any cyber threats.</p>
+                                <p class="post_intro">The Dynamic Cybersecurity Project Portfolio, where I showcase my extensive experience in protecting organizations from evolving digital threats. With a focus on delivering robust solutions, innovative strategies, and cutting-edge technologies, my portfolio demonstrates my commitment to enhancing digital resilience for clients across various industries.</p>
                                 <a href="cyber.html">Read More</a>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                             <img class="thumbnail" src="img/webdev.png">
                             <div class="preview">
                                 <h6 class="post_title">Web Development Projects</h6>
-                                <p class="post_intro">This portfolio showcases projects that serves as a visual representation as well as a demonstration of programming languages, as well as proficiency of various frameworks and tools for programming.</p>
+                                <p class="post_intro">Welcome to my Web Development Projects Portfolio, showcasing my expertise in designing and developing exceptional websites that captivate audiences and drive business growth. From dynamic e-commerce platforms to sleek corporate websites, my portfolio highlights my commitment to delivering innovative and user-centric web solutions tailored to my clients' unique needs.</p>
                                 <a href="webdev.html">Read More</a>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                             <img class="thumbnail" src="img/PM.jpg">
                             <div class="preview">
                                 <h6 class="post_title">IT Management Projects</h6>
-                                <p class="post_intro">Oversee the project lifecycle, from initiation to closure, while ensuring the effictive utilization of resources such as Agile, Scrum, Waterfall, to structure and streamline project workflows to foster effective collaboration and stakeholder satisfaction.</p>
+                                <p class="post_intro">The IT Management Project Page showcases my expertise in optimizing IT operations, enhancing governance, and driving efficiency. Through infrastructure modernization, ITSM implementation, governance and compliance initiatives, project portfolio management, and vendor management, I have demonstrated my ability to deliver tangible results and align technology initiatives with business objectives.</p>
                                 <a href="projectmanagement.html">Read More</a>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                             <img class="thumbnail" src="img/engineering.jpg">
                             <div class="preview">
                                 <h6 class="post_title">Engineering</h6>
-                                <p class="post_intro">Adept at identifying complex technical issues,enhancing product functionality, ensuring optimal performance. Excellent analytical skills, problem-solving abilities, and impeccable attention to detail, committed to delivering exceptional test solutions</p>
+                                <p class="post_intro">As a Test Engineer, my primary responsibility is to ensure the quality, reliability, and performance of software and hardware products. I work diligently to design, develop, and execute effective test plans, test cases, and test scripts to identify defects and validate product functionality.</p>
                                 <a href="engineering.html">Read More</a>
                             </div>
                         </div>
