--- a/webdev.html
+++ b/webdev.html
@@ -45,12 +45,12 @@
 
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Click on the following links below and download the <a target="_blank" href="resume/Jose Enquito Web Development 2023.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
+                    <h5 style="justify-content: center;">Click on the following links below and dowload the <a target="_blank" href="resume/Jose Enquito Web Development 2023.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
                 </div>
 
                 <div class="center_column">
                     <li><a target="_blank" href="Weather App/index.html">Weather App using HTML, CSS, JavaScript</a></li>    
-                    <li><a target="_blank" href="Chat(me)GPT/index.html">Custom ChatGPT</a></li>
+                    <li><a target="_blank" href="Blurb Game/index.html">Blurb - The Word Guessing Game</a></li>
                     <li><a target="_blank" href="Minesweeper/index.html">Minesweeper Game</a></li>
                     <li><a target="_blank" href="Tradingview/index.html">Trading View Stock Market</a></li>
                 </div>
