--- a/engineering.html
+++ b/engineering.html
@@ -38,26 +38,40 @@
         <section class="s1">
             <div class="main_container">
                 <div class="greeting_wrapper">
-                    <h1>Project Management</h1>
+                    <h1>Test Engineer Background</h1>
                 </div>
             </div>
 
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Below are some highlights and experience. <a target="_blank" href="resume/Project Management Resume.pdf" download="Jose Enquito Resume">Resume download</a>.</h5>
+                    <h5 style="justify-content: center;">Below are some highlights and experience. <a target="_blank" href="resume/Engineering Resume.pdf" download="Jose Enquito Resume">Resume download</a>.</h5>
                 </div>
 
                 <div class="center_column">
                     <p style="font-weight: bold;">Abbott Laboratories</p>
-                    <li>Teamed up with engineers to collaborate on project planning and implementation.</li>
-                    <li>Debriefed with project team to review weekly and monthly goals</li>
-                    <li>Managed project budget and expenses, reducing project overrun by 17%</li>
-                    <li>Facilitated project tracking with JIRA and Asana, increasing task completion by 22%</li>
+                    <li>Developed hardware components in 3 months to reduce production cost by 20%.</li>
+                    <li>Built test rigs for prototype testing, increasing overall efficienty by 50%.</li>
+                    <li>Designed and developed test coupons and hardware to improve performance.</li>
+                    <li>Managed labs for usage, making sure each lab is up-to-date with standards of site.</li>
                     
-                    <p style="font-weight: bold;">Arizona State University</p>
-                    <li>Facilitated team project management on Capstone Project using <a href="img/Scrum.jpg">Scrum</a> and <a href="img/Kanban.jpg">Kanban</a></li>
-                    <li>Created <a href="img/Project Tracking.jpg">project timelines and milestones</a> to achieve project completion on time</li>
-                    <li>Coordinated with team on workload, resulting in 15% increase producitivity</li>
+                    <p style="font-weight: bold;">Tesla</p>
+                    <li>Implemented new cell engineering process to reduce cost by 25%.</li>
+                    <li>Reduce cost of prototype manufacturing by 33% with new battery core design.</li>
+                    <li>Assited in carrying out operation of laboratory equipment for cell procurment.</li>
+                    <li>Carried out thermal cycling, storage cycle, and battery life test for research.</li>
+
+                    <p style="font-weight: bold;">Dexcom</p>
+                    <li>Analyzed and developed tests of field devices as well as sustainbility of devices.</li>
+                    <li>Troubleshooted and tested new designs, assesed and reviewed data of field activity.</li>
+                    <li>Maintain and assemble test fixtures for testing.</li>
+                    <li>Performed electrical, mechanical experiments for quality.</li>
+
+                    <p style="font-weight: bold;">Hewlett-Packard</p>
+                    <li>Reduced test cycle time by 21%</li>
+                    <li>Testing included media defect detection and quality control.</li>
+                    <li>Stress testing, HALT, Environment Testing, and Sustainability Testing.</li>
+                    <li>Mechanical cycle testing, life cycle testing, quality control reliability testing.</li>
+                    <p></p>
                 </div>
                 
             </div>
