--- a/cyber.html
+++ b/cyber.html
@@ -44,7 +44,7 @@
           
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Click on the links below and download the <a target="_blank" href="resume/Jose Enquito Cyber Security Resume 2023.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
+                    <h5 style="justify-content: center;">Click on the links below and download the <a target="_blank" href="resume/Cybersecurity Analyst Resume.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
                 </div>
 
                 <div class="center_column">
