--- a/webdev.html
+++ b/webdev.html
@@ -40,12 +40,11 @@
                 <div class="greeting_wrapper">
                     <h1>Programming Projects</h1>
                 </div>
-            </div>
-          
+            </div>          
 
             <div class="intro_wrapper">
                 <div class="nav_wrapper" style="grid-area:0;">
-                    <h5 style="justify-content: center;">Click on the following links below and dowload the <a target="_blank" href="resume/Jose Enquito Web Development 2023.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
+                    <h5 style="justify-content: center;">Click on the following links below and download the <a target="_blank" href="resume/Web Developer Resume.pdf" download="Jose Enquito Resume">resume here</a>.</h5>
                 </div>
 
                 <div class="center_column">
