--- a/Blurb Game/index.html
+++ b/Blurb Game/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         
-        <script src="word-db.js"></script>
-        <script src="index.js"></script>
+        <script src="js/word-db.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
