--- a/engineering.html
+++ b/engineering.html
@@ -50,21 +50,21 @@
                 <div class="center_column">
                     <p style="font-weight: bold;">Abbott Laboratories</p>
                     <li>Developed hardware components in 3 months to reduce production cost by 20%.</li>
-                    <li>Built test rigs for prototype testing, increasing overall efficienty by 50%.</li>
+                    <li>Built test rigs for prototype testing, increasing overall efficiency by 50%.</li>
                     <li>Designed and developed test coupons and hardware to improve performance.</li>
-                    <li>Managed labs for usage, making sure each lab is up-to-date with standards of site.</li>
+                    <li>Managed labs for usage, making sure each lab is up-to-date with SOP.</li>
                     
                     <p style="font-weight: bold;">Tesla</p>
                     <li>Implemented new cell engineering process to reduce cost by 25%.</li>
-                    <li>Reduce cost of prototype manufacturing by 33% with new battery core design.</li>
-                    <li>Assited in carrying out operation of laboratory equipment for cell procurment.</li>
+                    <li>Reduce the cost of prototype manufacturing by 33% with new battery core design.</li>
+                    <li>Assisted in carrying the operation of laboratory equipment for cell procurement.</li>
                     <li>Carried out thermal cycling, storage cycle, and battery life test for research.</li>
 
                     <p style="font-weight: bold;">Dexcom</p>
-                    <li>Analyzed and developed tests of field devices as well as sustainbility of devices.</li>
-                    <li>Troubleshooted and tested new designs, assesed and reviewed data of field activity.</li>
+                    <li>Analyzed and developed tests of field devices as well as sustainability of devices.</li>
+                    <li>Troubleshooted and tested new designs, assessed and reviewed data of field activity.</li>
                     <li>Maintain and assemble test fixtures for testing.</li>
-                    <li>Performed electrical, mechanical experiments for quality.</li>
+                    <li>Performed electrical and mechanical experiments for quality.</li>
 
                     <p style="font-weight: bold;">Hewlett-Packard</p>
                     <li>Reduced test cycle time by 21%</li>
