--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="about_me">
                         <h4>More About Me</h4>
 
-                        <p>My background is quite complex since I have both experience and exposure to both Engineering and Programming disciplines. I love
+                        <p>My background is quite complex since I have experience and exposure to both Engineering and Programming disciplines. I love
                             everything that involves technology, which includes medical device development, software programming, front-end development, and more.
                         </p>
 
