--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="s1">
             <div class="main_container">
                     <div class="greeting_wrapper">
-                        <h1>Hello! My Name is Jay Enquito</h1>
+                        <h1>Hello! My Name is Jose Enquito</h1>
                     </div>
 
                     <div class="intro_wrapper">
