--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                                     <div id="corner_tl" class="corner"></div>
                                     <div id="corner_tr" class="corner"></div>
                                     <h3>Who am I?</h3>
-                                    <p>I am an aspiring Cybersecurity Analyst and Full Stack Developer with years of experience in 
-                                    programming as well as a background in Engineering
+                                    <p>I am an aspiring Cyber Security Engineer with years of experience in 
+                                    Incident Monitoring and Threat Analysis as well as a background in Engineering and Programming
                                     </p>
                                     <div id="corner_bl" class="corner"></div>
                                     <div id="corner_br" class="corner"></div>
